--- a/carrito.html
+++ b/carrito.html
@@ -45,7 +45,7 @@
     </nav>
   </header>
   <section class="container my-5">
-    <div id="form" class="container my-5 text-center">
+    <div id="contrata" class="container my-5 text-center">
   <h4 class="fw-bold fs-1 fs-md-3">Contrata tu servicio</h4>
 </div>
 
